add auth and profile basic setup
